<resources>
    <string name="app_name">旅游导航系统</string>
    <string name="navigation_drawer_open">打开导航页</string>
    <string name="navigation_drawer_close">关闭导航页</string>
    <string name="nav_header_title">用户名</string>
    <string name="nav_header_subtitle">签名</string>
    <string name="nav_header_desc">用户头像</string>


    <string name="menu_bbs">论坛</string>
    <string name="menu_map">地图</string>
    <string name="menu_sense">附近景区搜索</string>

    <string name="clear_all">清空</string>
    <string name="search_by_keywords">地点搜索</string>
    <string name="pls_input_keywords">请输入地名</string>
    <string name="back">返回</string>
    <string name="go_here">去这儿</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="my_location">我在这</string>
    <string name="error_start">起点信息错误</string>
    <string name="error_traget_location">目标地点信息错误</string>
    <string name="start_is_target">起点和终点不能相同！</string>
    <string name="loading">加载中</string>
    <string name="more_information">详细信息</string>

    <string name="null_text">暂无</string>
    <string name="sense_name">景点名称</string>
    <string name="open_time">开放时间</string>
    <string name="coupon">优惠政策</string>
    <string name="introduction">景点介绍</string>
    <string name="tips">温馨提示</string>
    <string name="price_introduction">价格说明</string>

</resources>