<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sense_info_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SenseInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/sense_info_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sense_name" />

                <com.imorning.tns.ui.ContentTextView
                    android:id="@+id/sense_info_name"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/sense_info_layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sense_info_layout_name">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_time" />

                <com.imorning.tns.ui.ContentTextView
                    android:id="@+id/sense_info_time"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sense_info_layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sense_info_layout_time">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_introduction" />

                <com.imorning.tns.ui.PriceListView
                    android:id="@+id/sense_info_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/sense_info_layout_coupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sense_info_layout_price">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon" />

                <com.imorning.tns.ui.ContentTextView
                    android:id="@+id/sense_info_coupon"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sense_info_layout_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sense_info_layout_coupon">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tips" />

                <com.imorning.tns.ui.ContentTextView
                    android:id="@+id/sense_info_tip"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sense_info_layout_sense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sense_info_layout_tip">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/introduction" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.imorning.tns.ui.ContentTextView
                        android:id="@+id/sense_info_summary"
                        style="@style/TextContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/sense_info_image"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:paddingTop="@dimen/sense_info_image_vertical_spacing"
                        android:scaleType="fitCenter"
                        tools:srcCompat="@mipmap/ic_no_img" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>